# jaco_printing

./: CMakeLists.txt  README.md  package.xml  test.py
config/: taskParameters.yaml
launch/: jaco2moveit.launch  mainController.launch
scripts/: including rotation.txt  jaco2moveit.py  jaco2moveit.py~  jaco2moveit_node2.py  mainController.py  mainController.py~  multi-points.txt  multi-points_p1.txt  multi-points_p2.txt  multi-points_p3.txt  multi-points_p4.txt  pointlog(1).txt  pointlog(2).txt  pointlog.txt  pointlog0.txt  poses.txt  rotation_pub.py  sample_points.txt  sample_points.txt~  subscribe_and_publish.py  trajectory_service_client.py
src/: moveit_trajectory.cpp  trajectory_client.cpp
